Updated main.js to take user guesses

--- a/public/index.html
+++ b/public/index.html
@@ -45,5 +45,13 @@ canvas {
 
 <div id="main">
 	<h1>Pictionary</h1>
-	<canvas id="canvas"></canvas>
+	<div id="top-message">
+    	<div id="guess" style="display:">
+        	Make a guess: <input type="text">
+    	</div>
+	</div>
+	<div id="top-message">
+		<div id="usersGuess"> </div>
+	</div>
+<canvas id="canvas"></canvas>
 </div>
